[Vietnamese Lunar Calendar] Force using Vietnamese translation

As said in the documentation for the VietnameseCalendarProvider class, beside
the difference in timezone, Vietnamese lunar calendar also uses two different
Zodiac names from Chinese.

This patch essentially forces ICU to use Vietnamese translation, irrespective of
the user's locale setting. At the time of the original implementation, I was on
the fence about it, so I left the choice to the user. Though, Qt doesn't have a
way to query only LC_TIME, so one would have to set the global locale to
Vietnamese instead. (I didn't think directly reading the environment variable
was the way to go, so QLocale would have to do.)

ICU itself does not provide a separate Vietnamese lunar calendar despite the
calculation is virtually the same, nor does it provide a way to configure and
factor the timezone into the calculation. Otherwise, I wouldn't have to
reimplement everything in the first place. Thus, the library also didn't
provide translation from Vietnamese to other languages and instead just
use the Chinese transliteration. (Why they didn't use translation to English
instead of transliteration is beyond me).

Seeing that some other alternative calendar also use their own languages instead
of the system setting, this change shouldn't be too out of place. In a perfect
world, there should be translation from Vietnamese to other languages, but I
don't think that burden should be placed on KDE when it can be done at ICU
level (some time in the future if they every decide to).

BUG: 521787